--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
     {
       "name": "Marcus Bointon",
       "email": "phpmailer@synchromedia.co.uk"
+    },
+    {
+      "name": "Franck Cassedanne",
+      "email": "franck@ouarz.net"
     }
   ],
   "require": {
@@ -15,10 +19,16 @@
     "apix/log": "^1.1",
     "phpmailer/phpmailer": "^5.2"
   },
+  "require-dev": {
+      "phpunit/phpunit": "4.8.*"
+  },
   "autoload": {
-      "psr-4": {
-          "Apix\\Log\\Logger\\": "src/",
-          "Apix\\Log\\Logger\\tests\\": "tests/"
-      }
+    "psr-4": { "Apix\\Log\\Logger\\": "src/" }
+  },
+  "autoload-dev": {
+    "psr-4": { "Apix\\Log\\Logger\\tests\\": "tests/" }
+  },
+  "provide": {
+      "psr/log-implementation": "1.0.0"
   }
 }
